// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcTextarea > :props > should render as sensitive 1`] = `
<div
  class="ec-textarea"
  data-test="ec-textarea"
>
  <!--v-if-->
  <textarea
    class="ec-textarea__textarea my-sensitive-content-test-class"
    data-test="ec-textarea__textarea"
    id="ec-textarea-1"
    rows="4"
  />
  <!--v-if-->
</div>
`;

exports[`EcTextarea > :props > should render the textarea with a specific number of rows 1`] = `
<div
  class="ec-textarea"
  data-test="ec-textarea"
>
  <!--v-if-->
  <textarea
    class="ec-textarea__textarea"
    data-test="ec-textarea__textarea"
    id="ec-textarea-1"
    rows="5"
  />
  <!--v-if-->
</div>
`;

exports[`EcTextarea > :props > should render with a bottom note 1`] = `
<div
  class="ec-textarea"
  data-test="ec-textarea"
>
  <!--v-if-->
  <textarea
    class="ec-textarea__textarea"
    data-test="ec-textarea__textarea"
    id="ec-textarea-1"
    rows="4"
  />
  <div
    class="ec-textarea__bottom-note"
    data-test="ec-textarea__bottom-note"
  >
    Bottom note lorem ipsum
  </div>
</div>
`;

exports[`EcTextarea > :props > should render with a bottom note in a warning color theme 1`] = `
<div
  class="ec-textarea"
  data-test="ec-textarea"
>
  <!--v-if-->
  <textarea
    class="ec-textarea__textarea"
    data-test="ec-textarea__textarea"
    id="ec-textarea-1"
    rows="4"
  />
  <div
    class="ec-textarea__bottom-note ec-textarea__bottom-note--is-warning"
    data-test="ec-textarea__bottom-note"
  >
    Bottom note lorem ipsum
  </div>
</div>
`;

exports[`EcTextarea > :props > should render with a label 1`] = `
<div
  class="ec-textarea"
  data-test="ec-textarea"
>
  <label
    class="ec-textarea__label"
    data-test="ec-textarea__label"
    for="ec-textarea-1"
  >
    <span
      class="ec-textarea__label-text"
      data-test="ec-textarea__label-text"
    >
      Label lorem ipsum
      <!--v-if-->
    </span>
    <!--v-if-->
  </label>
  <textarea
    class="ec-textarea__textarea"
    data-test="ec-textarea__textarea"
    id="ec-textarea-1"
    rows="4"
  />
  <!--v-if-->
</div>
`;

exports[`EcTextarea > :props > should render with a labelTooltip 1`] = `
<div
  class="ec-textarea"
  data-test="ec-textarea"
>
  <label
    class="ec-textarea__label"
    data-test="ec-textarea__label"
    for="ec-textarea-1"
  >
    <span
      class="ec-textarea__label-text"
      data-test="ec-textarea__label-text"
    >
      Label lorem ipsum
      <svg
        class="ec-icon ec-icon--interactive ec-textarea__tooltip"
        data-ec-tooltip-mock-content="Label tooltip lorem ipsum"
        data-test="ec-textarea__tooltip ec-mock ec-tooltip-mock"
        height="14"
        width="14"
      >
        <use
          xlink:href="#ec-simple-info"
        />
      </svg>
    </span>
    <!--v-if-->
  </label>
  <textarea
    class="ec-textarea__textarea"
    data-test="ec-textarea__textarea"
    id="ec-textarea-1"
    rows="4"
  />
  <!--v-if-->
</div>
`;

exports[`EcTextarea > :props > should render with a note 1`] = `
<div
  class="ec-textarea"
  data-test="ec-textarea"
>
  <label
    class="ec-textarea__label"
    data-test="ec-textarea__label"
    for="ec-textarea-1"
  >
    <!--v-if-->
    <span
      class="ec-textarea__note"
      data-test="ec-textarea__note"
    >
      Note lorem ipsum
    </span>
  </label>
  <textarea
    class="ec-textarea__textarea"
    data-test="ec-textarea__textarea"
    id="ec-textarea-1"
    rows="4"
  />
  <!--v-if-->
</div>
`;

exports[`EcTextarea > :props > should render with an error message 1`] = `
<div
  class="ec-textarea"
  data-test="ec-textarea"
>
  <!--v-if-->
  <textarea
    aria-describedby="ec-textarea-error-1"
    class="ec-textarea__textarea ec-textarea__textarea--has-error"
    data-test="ec-textarea__textarea"
    id="ec-textarea-1"
    rows="4"
  />
  <div
    class="ec-textarea__error-text"
    data-test="ec-textarea__error-text"
    id="ec-textarea-error-1"
  >
    Error lorem ipsum
  </div>
</div>
`;

exports[`EcTextarea > renders as disabled 1`] = `
<div
  class="ec-textarea"
  data-test="ec-textarea"
>
  <!--v-if-->
  <textarea
    class="ec-textarea__textarea"
    data-test="ec-textarea__textarea"
    disabled=""
    id="ec-textarea-1"
    rows="4"
  />
  <!--v-if-->
</div>
`;

exports[`EcTextarea > renders with a placeholder 1`] = `
<div
  class="ec-textarea"
  data-test="ec-textarea"
>
  <!--v-if-->
  <textarea
    class="ec-textarea__textarea"
    data-test="ec-textarea__textarea"
    id="ec-textarea-1"
    placeholder="Placeholder lorem ipsum..."
    rows="4"
  />
  <!--v-if-->
</div>
`;

exports[`EcTextarea > should render as expected 1`] = `
<div
  class="ec-textarea"
  data-test="ec-textarea"
>
  <!--v-if-->
  <textarea
    class="ec-textarea__textarea"
    data-test="ec-textarea__textarea"
    id="ec-textarea-1"
    rows="4"
  />
  <!--v-if-->
</div>
`;

exports[`EcTextarea > should render given custom attributes 1`] = `
<div
  class="ec-textarea my-custom-class"
  data-test="ec-textarea"
  style="top: 0px;"
>
  <!--v-if-->
  <textarea
    class="ec-textarea__textarea"
    data-test="my-data-test ec-textarea__textarea"
    id="ec-textarea-1"
    role="input"
    rows="4"
  />
  <!--v-if-->
</div>
`;

exports[`EcTextarea > should render with a custom data test 1`] = `
<div
  class="ec-textarea"
  data-test="ec-textarea"
>
  <!--v-if-->
  <textarea
    class="ec-textarea__textarea"
    data-test="custom data test ec-textarea__textarea"
    id="ec-textarea-1"
    rows="4"
  />
  <!--v-if-->
</div>
`;
